--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/gerenciar-frequencias.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/gerenciar-frequencias.html
@@ -185,7 +185,7 @@
 				</form>
 
 				<div id="reposicoes">	          
-					<table class="table table-hover table-bordered">
+					<table class="table table-hover">
 					  <thead>
 					    <tr>
 					      <th class="sort" data-sort="timestamp">Data</th>
@@ -214,7 +214,7 @@
 			  </div>
 	          <div id="presenca" class="panel-body collapse in">
 				<div id="frequencias">	          
-					<table class="table table-hover table-bordered">
+					<table class="table table-hover">
 					  <thead>
 					    <tr>
 					      <th class="sort" data-sort="timestamp">Data</th>
