--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/list-turmas.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/list-turmas.html
@@ -38,6 +38,7 @@
 	          <ul class="list-group">
 	            <li th:if="${turmasNPI != null}" th:each="turma : ${turmasNPI}" class="list-group-item gp-list-group-item">
 	              	<b th:inline="text">[[${turma.nome}]] <span class="label label-primary"> [[${turma.status.descricao}]]</span></b>
+	              	<b th:inline="text"><span class="label label-info"> [[${#lists.size(turma.estagios)}]] Estagiarios</span></b>
 	              	<a th:href="@{'/Supervisao/Turma/' + ${turma.id}}" class="btn btn-success btn-sm pull-right gp-btn-acompanhamento">Detalhes</a>
 <!--/* 	              	<a th:if="${turma.selecao == null}" th:href="@{'/Selecao/{idTurma}/Adicionar'(idTurma=${turma.id})}" class="btn btn-primary btn-sm pull-right gp-btn-acompanhamento">Abrir Seleção</a> */-->
 <!--/* 	              	<a th:if="${turma.selecao != null}" th:href="@{'/Selecao/{idSelecao}'(idSelecao=${turma.selecao.id})}" class="btn btn-primary btn-sm pull-right gp-btn-acompanhamento">Detalhes Seleção</a> */-->
