Exibição dos Dados Consolidados; Exibição avaliação de rendimento via-arquivo; Download avaliação de rendimento via-arquivo [visão estagiario]; Exibição matricula;

--- a/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/acompanhamento-estagio.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/acompanhamento-estagio.html
@@ -42,12 +42,12 @@
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#consolidado"><i class="fa fa-caret-down" aria-hidden="true"></i> Consolidado Frequências</a>
 			  </div>
-	          <div id="consolidado" class="panel-body collapse">
+	          <div id="consolidado" class="panel-body collapse in">
 
 		      <div class="col-sm-4">
 		          <ul class="list-group">
 		            <li class="list-group-item gp-list-group-item list-group-item-success">
-		              <b>Presenças</b> <span class="badge">42</span>
+		              <b>Presenças</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.porcentagemPresencas}]]%</span>
 		            </li>
 		          </ul>
 		      </div>
@@ -55,7 +55,7 @@
 		      <div class="col-sm-4">
 		          <ul class="list-group">
 		            <li class="list-group-item gp-list-group-item list-group-item-danger">
-		              <b>Faltas</b> <span class="badge">42</span>
+		              <b>Faltas</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.porcentagemFaltas}]]%</span>
 		            </li>
 		          </ul>
 		      </div>
@@ -63,7 +63,7 @@
 		      <div class="col-sm-4">
 		          <ul class="list-group">
 		            <li class="list-group-item gp-list-group-item list-group-item-warning">
-		              <b>Atrasos</b> <span class="badge">42</span>
+		              <b>Atrasos</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.totalAtrasos}]]</span>
 		            </li>
 		          </ul>
 		      </div>
@@ -71,7 +71,7 @@
 		      <div class="col-sm-4">
 		          <ul class="list-group">
 		            <li class="list-group-item gp-list-group-item list-group-item-info">
-		              <b>Reposições</b> <span class="badge">42</span>
+		              <b>Reposições</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.totalReposicoes}]]</span>
 		            </li>
 		          </ul>
 		      </div>
@@ -79,17 +79,10 @@
 		      <div class="col-sm-4">
 		          <ul class="list-group">
 		            <li class="list-group-item gp-list-group-item list-group-item-default">
-		              <b>Pendências</b> <span class="badge">42</span>
+		              <b>Pendências</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.totalPendencias}]]</span>
 		            </li>
 		          </ul>
 		      </div>
-
-	            <a href="#" class="btn btn-success disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.porcentagemPresencas}]]%</span> <br/>Presenças</a>
-	            <a href="#" class="btn btn-danger disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.porcentagemFaltas}]]%</span> <br/>Faltas</a>
-	            <a href="#" class="btn btn-warning disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.totalAtrasos}]]</span> <br/>Atrasos</a>
-	            <a href="#" class="btn btn-primary disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.totalReposicoes}]]</span> <br/>Reposições</a>
-	            <a href="#" class="btn btn-default disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.totalPendecias}]]</span> <br/>Pendências</a>
-	            <a href="#" class="btn btn-bluegray disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.horasEstagiadas}]]h</span> <br/>Horas Estagiadas</a>
 	          </div>
 	        </div>
 	     
@@ -235,16 +228,32 @@
 		            </div>       
 				</div>
 			</div>
-
-     <div class="panel panel-bluegray">
+	        
+	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#avaliacaoRendimento"><i class="fa fa-caret-down" aria-hidden="true"></i> Avaliação Rendimento</a>
 			  </div>
 	        <div id="avaliacaoRendimento" class="panel-body collapse in">
-	        
-	        <span th:if="${estagio.avaliacaoRendimento == null}">Avaliação de Rendimento não foi realizada</span>
-
-	         <div class="avaliacao" th:if="${estagio.avaliacaoRendimento != null}">
+	         <div class="avaliacao" th:if="${estagio.avaliacaoRendimento != null and estagio.avaliacaoRendimento.modo.name()=='FORMULARIO'}">
+	   			<div class="row">
+	   				<div class="col-md-12">
+				      <strong>Atividade curricular:</strong>
+				      <p th:text="${estagio.avaliacaoRendimento.atividadeCurricular != null} ? ${estagio.avaliacaoRendimento.atividadeCurricular} : ' '"></p>
+				    </div>
+				    <div class="col-md-12">
+				      <strong>Início da avaliação:</strong>
+				      <p th:text="${estagio.avaliacaoRendimento.inicioAvaliacao != null} ? ${#dates.format(estagio.avaliacaoRendimento.inicioAvaliacao, 'dd/MM/yyyy')} : ' '"></p>
+				    </div>
+				    <div class="col-md-12">
+				      <strong>Término da avaliação:</strong>
+				      <p th:text="${estagio.avaliacaoRendimento.terminoAvaliacao != null} ? ${#dates.format(estagio.avaliacaoRendimento.terminoAvaliacao, 'dd/MM/yyyy')} : ' '"></p>
+				    </div>
+				    <div class="col-md-12">
+				      <strong>Objetivo geral do estágio:</strong>
+				      <p th:text="${estagio.avaliacaoRendimento.objetivoEstagio != null} ? ${estagio.avaliacaoRendimento.objetivoEstagio} : ' '"></p>
+				    </div>
+	   			</div>
+	   			<hr/>
 	   			<div class="row">
 	         		<div class="col-md-12"><h6>ASSIDUIDADE E DISCIPLINA</h6></div>
 				     <div class="col-md-12">
@@ -320,10 +329,74 @@
 				      		<p th:text="${estagio.avaliacaoRendimento.fatorRelacionamentoComentario}"></p>
 				     	 </div>
 			     </div>
+			     <hr/>
+			     <div class="row">
+			     	<div class="col-md-12"><h6>NOTA E COMENTÁRIO FINAL</h6></div>
+			     	<div class="col-md-12">
+			      		<strong>Nota Geral (0,0 a 10,0):</strong>
+			      		<p th:text="${estagio.avaliacaoRendimento.nota != null} ? ${estagio.avaliacaoRendimento.nota} : ' ' "></p>
+			      	</div>
+			      	<div class="col-md-12">
+			      		<strong>Comentários finais e sugestões:</strong>
+			      		<p th:text="${estagio.avaliacaoRendimento.comentarioFinal != null} ? ${estagio.avaliacaoRendimento.comentarioFinal} : ' ' "></p>
+			      	</div>
+			     </div>
+			     <hr/>
+			     <div class="row">
+			     	<div class="col-md-12"><h6>PARECER DO PROFESSOR ORIENTADOR</h6></div>
+			     	<div class="col-md-12">
+			     		<strong>Confirmação do estágio:</strong>
+			      		<p th:text="${estagio.avaliacaoRendimento.confirmadoNoEstagio} ? 'Confirmado no estágio' : 'Não confirmado no estágio' "></p>
+			      	</div>
+			      	<div class="col-md-12">
+			      		<strong>Fatores que serviram de base para o parecer emitido:</strong>
+			      		<ul class="lista-fatores">
+				      		<li th:if="${estagio.avaliacaoRendimento.fatorAssuidade}" th:text="Assiduidade" />
+				      		<li th:if="${estagio.avaliacaoRendimento.fatorDisciplina}" th:text="Disciplina" />
+				      		<li th:if="${estagio.avaliacaoRendimento.fatorCapacidadeIniciativa}" th:text="${'Capacidade de Iniciativa'}" />
+				      		<li th:if="${estagio.avaliacaoRendimento.fatorProdutividade}" th:text="Produtividade" />
+				      		<li th:if="${estagio.avaliacaoRendimento.fatorResponsabilidade}" th:text="Responsabilidade" />
+				      		<li th:if="${estagio.avaliacaoRendimento.outrosMotivos and estagio.avaliacaoRendimento.especificacaoMotivo != null}" th:text="'Outro: ' + ${estagio.avaliacaoRendimento.especificacaoMotivo}" />
+			      		</ul>
+			      	</div>
+			      	<div class="col-md-12">
+			     		<strong>Comentários/Observações:</strong>
+			      		<p th:text="${estagio.avaliacaoRendimento.observacaoParecer != null} ? ${estagio.avaliacaoRendimento.observacaoParecer}  : ' ' "></p>
+			      	</div>
+			      	<div class="col-md-12">
+			     		<strong>Necessidade de Treinamento:</strong>
+			      		<p th:text="${estagio.avaliacaoRendimento.necessidadeTreinamento and estagio.avaliacaoRendimento.especificacaoTreinamento != null} ? 'Há necessidade de treinamento: '+${estagio.avaliacaoRendimento.especificacaoTreinamento}  : 'Não há necessidade de treinamento.' "></p>
+			      	</div>
+			      	<div class="col-md-12" th:if="${estagio.avaliacaoRendimento.necessidadeTreinamento}">
+			     		<strong>Caráter do Treinamento:</strong>
+			      		<p th:text="${estagio.avaliacaoRendimento.caraterTreinamentoUrgente} ? 'Urgente' : (${estagio.avaliacaoRendimento.caraterTreinamentoImportante} ? 'Importante' :  'Comum')"></p>
+			      	</div>
+			     </div>
 			  </div>
-				          		
+			  
+			  
+			 <!-- VIA ARQUIVO --> 
+			 <div class="avaliacao" th:if="${estagio.avaliacaoRendimento != null and estagio.avaliacaoRendimento.modo.name()=='ARQUIVO'}">
+	   			<div class="row">
+			     	<div class="col-md-12"><h6>NOTA E COMENTÁRIO FINAL</h6></div>
+			     	<div class="col-md-12">
+			      		<strong>Nota Geral (0,0 a 10,0):</strong>
+			      		<p th:text="${estagio.avaliacaoRendimento.nota != null} ? ${estagio.avaliacaoRendimento.nota} : ' ' "></p>
+			      	</div>
+			      	<div class="col-md-12">
+			      		<strong>Comentários finais e sugestões:</strong>
+			      		<p th:text="${estagio.avaliacaoRendimento.comentarioFinal != null} ? ${estagio.avaliacaoRendimento.comentarioFinal} : ' ' "></p>
+			      	</div>
+			      	<div class="col-md-12" th:if="${estagio.avaliacaoRendimento.documento != null} ">
+			      		<strong>Arquivo da avaliação:</strong>
+			      		<p><a class="gp-link-download-submissao" th:href="@{/Estagiario/Acompanhamento/{idEstagio}/DownloadAvaliacaoRendimento(idEstagio=${estagio.id})}" th:text="${estagio.avaliacaoRendimento.documento.nome}+'.pdf'"></a></p>
+			      	</div>
+			     </div>
+			 
+			  </div>
 	           </div>
-	        </div>
+	         </div>
+	        
 	
 	      </div>
 	    
@@ -392,30 +465,30 @@
 	           </div>
 	        </div>
 	
-	        <div class="panel panel-bluegray">
-	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#avaliacaoEstagio"><i class="fa fa-caret-down" aria-hidden="true"></i> Avaliação Final de Estágio</a>
-	          </div>
+<!-- 	        <div class="panel panel-bluegray"> -->
+<!-- 	          <div class="panel-heading"> -->
+<!-- 	            <a class="panel-title" data-toggle="collapse" data-target="#avaliacaoEstagio"><i class="fa fa-caret-down" aria-hidden="true"></i> Avaliação Final de Estágio</a> -->
+<!-- 	          </div> -->
 	
-	          <div id="avaliacaoEstagio" class="panel-body collapse in">
-				  <table class="table table-hover">
-				    <tbody>
-				      <tr>
-				        <td class="gp-sem-borda"><strong>Situação</strong></td>
-				        <td class="gp-sem-borda" th:text="${estagio.situacao}"></td>
-				      </tr>
-				      <tr>
-				        <td><strong>Nota</strong></td>
-				        <td th:inline="text"> <p th:if="${#strings.equals(estagio.situacao, 'CONCLUIDO')}" th:text="${estagio.nota}"></p> </td>
-				      </tr>
-				      <tr>
-				        <td><strong>Resultado</strong></td>
-				        <td th:inline="text"> <p th:if="${#strings.equals(estagio.situacao, 'CONCLUIDO')}" th:text="${estagio.resultado.descricao}"></p> </td>
-				      </tr>
-				    </tbody>
-				  </table>
-	           </div>
-	        </div>
+<!-- 	          <div id="avaliacaoEstagio" class="panel-body collapse in"> -->
+<!-- 				  <table class="table table-hover"> -->
+<!-- 				    <tbody> -->
+<!-- 				      <tr> -->
+<!-- 				        <td class="gp-sem-borda"><strong>Situação</strong></td> -->
+<!-- 				        <td class="gp-sem-borda" th:text="${estagio.situacao}"></td> -->
+<!-- 				      </tr> -->
+<!-- 				      <tr> -->
+<!-- 				        <td><strong>Nota</strong></td> -->
+<!-- 				        <td th:inline="text"> <p th:if="${#strings.equals(estagio.situacao, 'CONCLUIDO')}" th:text="${estagio.nota}"></p> </td> -->
+<!-- 				      </tr> -->
+<!-- 				      <tr> -->
+<!-- 				        <td><strong>Resultado</strong></td> -->
+<!-- 				        <td th:inline="text"> <p th:if="${#strings.equals(estagio.situacao, 'CONCLUIDO')}" th:text="${estagio.resultado.descricao}"></p> </td> -->
+<!-- 				      </tr> -->
+<!-- 				    </tbody> -->
+<!-- 				  </table> -->
+<!-- 	           </div> -->
+<!-- 	        </div> -->
 	      </div>
 	      
 
