--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/adicionar-avaliacao-plano.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/adicionar-avaliacao-plano.html
@@ -37,6 +37,10 @@
 				        <td class="gp-sem-borda" th:text="${estagio.estagiario.nomeCompleto}"></td>
 				 	  </tr>
 				      <tr>
+				        <td><strong>Matrícula:</strong></td>
+				        <td th:text="${estagio.estagiario.matricula}"></td>
+				 	  </tr>
+				      <tr>
 				        <td><strong>Curso:</strong></td>
 				        <td th:text="${estagio.estagiario.curso.descricao}"></td>
 				      </tr>
