--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/avaliacao-rendimento-arquivo.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/avaliacao-rendimento-arquivo.html
@@ -64,6 +64,10 @@ div#modoAvaliacao {
 									<td class="gp-sem-borda"
 										th:text="${estagio.estagiario.nomeCompleto}"></td>
 								</tr>
+							      <tr>
+							        <td><strong>Matrícula:</strong></td>
+							        <td th:text="${estagio.estagiario.matricula}"></td>
+							 	  </tr>
 								<tr>
 									<td><strong>Curso:</strong></td>
 									<td th:if="${estagio.estagiario.curso != null}"
