--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/editar-avaliacao-rendimento-arquivo.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/editar-avaliacao-rendimento-arquivo.html
@@ -54,6 +54,10 @@
 				        <td class="gp-sem-borda" th:text="${estagio.estagiario.nomeCompleto}"></td>
 				 	  </tr>
 				      <tr>
+				        <td><strong>Matrícula:</strong></td>
+				        <td th:text="${estagio.estagiario.matricula}"></td>
+				 	  </tr>
+				      <tr>
 				        <td><strong>Curso:</strong></td>
 				        <td th:if="${estagio.estagiario.curso != null}" th:text="${estagio.estagiario.curso.descricao}"></td>
 				        <td th:if="${estagio.estagiario.curso == null}">Não há curso</td>
