--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/gerenciar-frequencias.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/gerenciar-frequencias.html
@@ -37,6 +37,10 @@
 				        <td class="gp-sem-borda" th:text="${estagio.estagiario.nomeCompleto}"></td>
 				 	  </tr>
 				      <tr>
+				        <td><strong>Matrícula:</strong></td>
+				        <td th:text="${estagio.estagiario.matricula}"></td>
+				 	  </tr>
+				      <tr>
 				        <td><strong>Curso:</strong></td>
 				        <td th:text="${estagio.estagiario.curso.descricao}"></td>
 				      </tr>
@@ -105,12 +109,49 @@
 	            <a class="panel-title" data-toggle="collapse" data-target="#consolidado"><i class="fa fa-caret-down" aria-hidden="true"></i> Consolidado Frequências</a>
 			  </div>
 	          <div id="consolidado" class="panel-body collapse in">
-	            <a href="#" class="btn btn-success disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.porcentagemPresencas}]]%</span> <br/>Presenças</a>
-	            <a href="#" class="btn btn-danger disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.porcentagemFaltas}]]%</span> <br/>Faltas</a>
-	            <a href="#" class="btn btn-warning disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.totalAtrasos}]]</span> <br/>Atrasos</a>
-	            <a href="#" class="btn btn-primary disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.totalReposicoes}]]</span> <br/>Reposições</a>
-	            <a href="#" class="btn btn-default disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.totalPendecias}]]</span> <br/>Pendências</a>
-	            <a href="#" class="btn btn-bluegray disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.horasEstagiadas}]]h</span> <br/>Horas Estagiadas</a>
+			      <div class="col-sm-4">
+			          <ul class="list-group">
+			            <li class="list-group-item gp-list-group-item list-group-item-success">
+			              <b>Presenças</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.porcentagemPresencas}]]%</span>
+			            </li>
+			          </ul>
+			      </div>
+	
+			      <div class="col-sm-4">
+			          <ul class="list-group">
+			            <li class="list-group-item gp-list-group-item list-group-item-danger">
+			              <b>Faltas</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.porcentagemFaltas}]]%</span>
+			            </li>
+			          </ul>
+			      </div>
+	
+			      <div class="col-sm-4">
+			          <ul class="list-group">
+			            <li class="list-group-item gp-list-group-item list-group-item-warning">
+			              <b>Atrasos</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.totalAtrasos}]]</span>
+			            </li>
+			          </ul>
+			      </div>
+	
+			      <div class="col-sm-4">
+			          <ul class="list-group">
+			            <li class="list-group-item gp-list-group-item list-group-item-info">
+			              <b>Reposições</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.totalReposicoes}]]</span>
+			            </li>
+			          </ul>
+			      </div>
+	
+			      <div class="col-sm-4">
+			          <ul class="list-group">
+			            <li class="list-group-item gp-list-group-item list-group-item-default">
+			              <b>Pendências</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.totalPendencias}]]</span>
+			            </li>
+			          </ul>
+			      </div>
+			      <div class="col-sm-4">
+			          <ul class="list-group"></ul>
+			      </div>
+				  <br/><br/>
 	          </div>
 	        </div>
 
