Atualização Repository Gestão Pessoas

--- a/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/acompanhamento-estagio.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/acompanhamento-estagio.html
@@ -63,7 +63,7 @@
 		      <div class="col-sm-4">
 		          <ul class="list-group">
 		            <li class="list-group-item gp-list-group-item list-group-item-warning">
-		              <b>Atrasos</b> <span class="badge" th:inline="text">[[${consolidadoFrequencia.totalAtrasos}]]</span>
+		              <b>Atrasos</b> <span class="badge" th:inline="text">[[${estagio.atraso}]]</span>
 		            </li>
 		          </ul>
 		      </div>
